--- a/package.json
+++ b/package.json
@@ -50,8 +50,11 @@
         "concurrently": "^9.0.1",
         "framer-motion": "^11.18.2",
         "globals": "^15.14.0",
+        "gsap": "^3.13.0",
+        "install": "^0.13.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
+        "npm": "^11.4.0",
         "ogl": "^1.0.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
